[package]
edition = "2021"
name = "orn"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
const_format = "0.2.32"
fancy-regex = "0.13.0"
glob = "0.3.1"
math-parse = "1.0.2"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.19"
